# flakeit

./: .hlint.yaml  LICENSE  README.md  flake.nix  flakeit.cabal  justfile
.github/workflows/: ci.yaml  update-flake-lock.yaml
app/: Main.hs
src/: FlakeIt.hs
src/FlakeIt/: Cli.hs  DB.hs  Nix.hs  Options.hs  Template.hs  Types.hs
src/FlakeIt/Cli/: Parser.hs
