cabal-version: 3.0
name:          flakeit
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
author:        Mahdi Seyedan
maintainer:    mahdi.se@yahoo.com
build-type:    Simple

common common-options
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wno-unused-local-binds -Wno-unused-imports -Wno-unused-matches

  build-depends:      base
  default-language:   GHC2021
  default-extensions:
    DuplicateRecordFields
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings

library
  import:          common-options 
  hs-source-dirs:  src
  exposed-modules:
    FlakeIt
    FlakeIt.Cli
    FlakeIt.Cli.Parser
    FlakeIt.DB
    FlakeIt.Nix
    FlakeIt.Template

  autogen-modules: Paths_flakeit
  other-modules:   Paths_flakeit
  build-depends:
    , aeson
    , binary
    , bytestring
    , containers
    , directory
    , filepath
    , optparse-applicative
    , text
    , typed-process

executable flakeit
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  flakeit
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
