cabal-version:   3.0
name:            flakeit
version:         0.1.0
synopsis:        Make it easier to work with Nix flake templates
description:     Make it easier to work with Nix flake templates
homepage:        https://github.com/jedimahdi/flakeit#readme
bug-reports:     https://github.com/jedimahdi/flakeit/issues
license:         MIT
license-file:    LICENSE
category:        CLI, Development
author:          Mahdi Seyedan
maintainer:      mahdi.se@yahoo.com
build-type:      Simple
extra-doc-files: README.md

source-repository head
  type:     git
  location: https://github.com/jedimahdi/flakeit.git

common common-options
  ghc-options:
    -Wall -Wcompat -Wunused-packages -Wredundant-constraints

  build-depends:      base
  default-language:   GHC2021
  default-extensions:
    DuplicateRecordFields
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings

library
  import:          common-options 
  hs-source-dirs:  src
  exposed-modules:
    FlakeIt
    FlakeIt.Cli
    FlakeIt.Cli.Parser
    FlakeIt.DB
    FlakeIt.Nix
    FlakeIt.Template

  autogen-modules: Paths_flakeit
  other-modules:   Paths_flakeit
  build-depends:
    , aeson
    , binary
    , containers
    , directory
    , filepath
    , optparse-applicative
    , text
    , typed-process

executable flakeit
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  flakeit
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
